15 Ingress/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myservicea
spec:
  rules:
  - http:
      paths:
      - path: /myservicea
        pathType: Prefix
        backend:
          service:
            name: myservicea
            port:
              number: 5678
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myserviceb
spec:
  rules:
  - http:
      paths:
      - path: /myserviceb
        pathType: Prefix
        backend:
          service:
            name: myserviceb
            port:
              number: 5678
  ingressClassName: nginx
